<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ActivityNewStudents">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/student_new_toolbar"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:background="?attr/colorSurface"
        android:textSize="50dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/arrow"
        app:title="New Students" />

    <ImageView
        android:id="@+id/student_new_avatar"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/student_avatar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/student_new_toolbar" />

    <TextView
        android:id="@+id/student_new_name_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/student_name_header"
        android:textColor="#000000"
        android:textSize="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/student_new_avatar" />

    <EditText
        android:id="@+id/student_new_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:backgroundTint="@android:color/holo_blue_light"
        android:hint="@string/student_name_hint"
        android:imeOptions="actionNext"
        android:importantForAutofill="yes"
        android:inputType="textPersonName"
        android:maxLines="1"
        android:paddingStart="6dp"
        android:textColor="#000000"
        android:textSize="20dp"
        app:layout_constraintBaseline_toBaselineOf="@id/student_new_name_header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/student_new_name_header" />

    <TextView
        android:id="@+id/student_new_id_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/student_id_header"
        android:textColor="#000000"
        android:textSize="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/student_new_name_header" />

    <EditText
        android:id="@+id/student_new_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:backgroundTint="@android:color/holo_blue_light"
        android:hint="@string/student_id_hint"
        android:imeOptions="actionNext"
        android:importantForAutofill="yes"
        android:inputType="number"
        android:maxLines="1"
        android:paddingStart="6dp"
        android:textColor="#000000"
        android:textSize="20dp"
        app:layout_constraintBaseline_toBaselineOf="@id/student_new_id_header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/student_new_id_header" />

    <TextView
        android:id="@+id/student_new_phone_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/student_phone_header"
        android:textColor="#000000"
        android:textSize="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/student_new_id_header" />

    <EditText
        android:id="@+id/student_new_phone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:backgroundTint="@android:color/holo_blue_light"
        android:hint="@string/student_phone_hint"
        android:imeOptions="actionNext"
        android:importantForAutofill="yes"
        android:inputType="phone"
        android:maxLines="1"
        android:paddingStart="6dp"
        android:textColor="#000000"
        android:textSize="20dp"
        app:layout_constraintBaseline_toBaselineOf="@id/student_new_phone_header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/student_new_phone_header" />

    <TextView
        android:id="@+id/student_new_address_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/student_address_header"
        android:textColor="#000000"
        android:textSize="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/student_new_phone_header" />

    <EditText
        android:id="@+id/student_new_address"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:backgroundTint="@android:color/holo_blue_light"
        android:hint="@string/student_address_hint"
        android:imeOptions="actionDone"
        android:importantForAutofill="yes"
        android:inputType="textPostalAddress"
        android:maxLines="1"
        android:paddingStart="6dp"
        android:textColor="#000000"
        android:textSize="20dp"
        app:layout_constraintBaseline_toBaselineOf="@id/student_new_address_header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/student_new_address_header" />

    <CheckBox
        android:id="@+id/student_new_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/checked_student"
        android:textColor="#000000"
        android:textSize="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/student_new_address_header" />

    <Button
        android:id="@+id/cancel_button_new"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="#BDBCBC"
        android:text="@string/cancel_button"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/save_button_new"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/save_button_new"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:backgroundTint="#BDBCBC"
        android:text="@string/save_button"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/cancel_button_new" />

</androidx.constraintlayout.widget.ConstraintLayout>
