<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/list_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="center_vertical"
    android:padding="8dp">

    <ImageView
        android:id="@+id/students_list_item_avatar"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:contentDescription="@string/student_list_item_avatar_description"
        android:scaleType="centerCrop"
        tools:src="@drawable/student_avatar" />

    <Space
        android:layout_width="12dp"
        android:layout_height="0dp" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/students_list_item_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_name_placeholder"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/students_list_item_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_id_placeholder"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

    <CheckBox
        android:id="@+id/students_list_item_is_checked"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</LinearLayout>
