<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ActivityEditStudent">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/student_edit_toolbar"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginTop="20dp"
        android:background="?attr/colorSurface"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/arrow"
        app:title="Edit Students" />

    <ImageView
        android:id="@+id/student_edit_avatar"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/student_avatar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/student_edit_toolbar" />

    <TextView
        android:id="@+id/student_edit_name_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/student_name_header"
        android:textColor="#000000"
        android:textSize="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/student_edit_avatar" />

    <EditText
        android:id="@+id/student_edit_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:backgroundTint="@android:color/holo_blue_light"
        android:inputType="textPersonName"
        android:paddingStart="6dp"
        android:textColor="#000000"
        android:textSize="20dp"
        app:layout_constraintBaseline_toBaselineOf="@id/student_edit_name_header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/student_edit_name_header"
        tools:text="Yael" />

    <TextView
        android:id="@+id/student_edit_id_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/student_id_header"
        android:textColor="#000000"
        android:textSize="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/student_edit_name_header" />

    <EditText
        android:id="@+id/student_edit_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:backgroundTint="@android:color/holo_blue_light"
        android:inputType="number"
        android:paddingStart="6dp"
        android:textColor="#000000"
        android:textSize="20dp"
        app:layout_constraintBaseline_toBaselineOf="@id/student_edit_id_header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/student_edit_id_header"
        tools:text="213454051" />

    <TextView
        android:id="@+id/student_edit_phone_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/student_phone_header"
        android:textColor="#000000"
        android:textSize="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/student_edit_id_header" />

    <EditText
        android:id="@+id/student_edit_phone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:backgroundTint="@android:color/holo_blue_light"
        android:inputType="phone"
        android:paddingStart="6dp"
        android:textColor="#000000"
        android:textSize="20dp"
        app:layout_constraintBaseline_toBaselineOf="@id/student_edit_phone_header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/student_edit_phone_header"
        tools:text="0542261484" />

    <TextView
        android:id="@+id/student_edit_address_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/student_address_header"
        android:textColor="#000000"
        android:textSize="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/student_edit_phone_header" />

    <EditText
        android:id="@+id/student_edit_address"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:backgroundTint="@android:color/holo_blue_light"
        android:inputType="textPostalAddress"
        android:paddingStart="6dp"
        android:textColor="#000000"
        android:textSize="20dp"
        app:layout_constraintBaseline_toBaselineOf="@id/student_edit_address_header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/student_edit_address_header"
        tools:text="Kiryat Ono" />

    <CheckBox
        android:id="@+id/student_edit_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/checked_student"
        android:textColor="#000000"
        android:textSize="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/student_edit_address_header" />

    <Button
        android:id="@+id/cancel_button_edit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="#BDBCBC"
        android:text="@string/cancel_button"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/delete_button_edit"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/delete_button_edit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="#BDBCBC"
        android:text="@string/delete_button"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/save_button_edit"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/cancel_button_edit" />

    <Button
        android:id="@+id/save_button_edit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:backgroundTint="#BDBCBC"
        android:text="@string/save_button"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/delete_button_edit" />

</androidx.constraintlayout.widget.ConstraintLayout>
