<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ActivityStudentDetails">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/student_details_toolbar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="?attr/colorSurface"
        android:textSize="100sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/arrow"
        app:title="Students Details" />

    <ImageView
        android:id="@+id/student_details_avatar"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/student_avatar"
        app:layout_constraintStart_toStartOf="@+id/student_details_toolbar"
        app:layout_constraintTop_toBottomOf="@id/student_details_toolbar" />

    <TextView
        android:id="@+id/student_details_name_header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/student_name_header"
        android:textColor="#000000"
        android:textSize="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/student_details_avatar" />

    <TextView
        android:id="@+id/student_details_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingLeft="10dp"
        android:text="Yael"
        android:textColor="#000000"
        android:textSize="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/student_details_name_header"
        app:layout_constraintTop_toBottomOf="@id/student_details_avatar" />


    <TextView
        android:id="@+id/student_details_id_header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/student_id_header"
        android:textColor="#000000"
        android:textSize="25dp"
        app:layout_constraintStart_toStartOf="@+id/student_details_name_header"
        app:layout_constraintTop_toBottomOf="@id/student_details_name" />

    <TextView
        android:id="@+id/student_details_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:paddingLeft="10dp"
        android:text="213454051"
        android:textColor="#000000"
        android:textSize="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/student_details_id_header"
        app:layout_constraintTop_toBottomOf="@id/student_details_name" />

    <TextView
        android:id="@+id/student_details_phone_header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/student_phone_header"
        android:textColor="#000000"
        android:textSize="25dp"
        app:layout_constraintStart_toStartOf="@+id/student_details_id_header"
        app:layout_constraintTop_toBottomOf="@id/student_details_id" />

    <TextView
        android:id="@+id/student_details_phone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:paddingLeft="10dp"
        android:text="0542261484"
        android:textColor="#000000"
        android:textSize="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/student_details_phone_header"
        app:layout_constraintTop_toBottomOf="@id/student_details_id" />

    <TextView
        android:id="@+id/student_details_address_header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/student_address_header"
        android:textColor="#000000"
        android:textSize="25dp"
        app:layout_constraintStart_toStartOf="@+id/student_details_phone_header"
        app:layout_constraintTop_toBottomOf="@id/student_details_phone" />

    <TextView
        android:id="@+id/student_details_address"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:paddingLeft="10dp"
        android:text="Kiryat Ono"
        android:textColor="#000000"
        android:textSize="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/student_details_address_header"
        app:layout_constraintTop_toBottomOf="@id/student_details_phone" />

    <CheckBox
        android:id="@+id/student_details_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/checked_student"
        android:textAlignment="inherit"
        android:textColor="#000000"
        android:textSize="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/student_details_address" />

    <Button
        android:id="@+id/edit_button_details"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#BDBCBC"
        android:text="@string/edit_button"
        android:textColor="#000000"
        android:textSize="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
